--- a/google/cloud/language/v1/language_gapic.yaml
+++ b/google/cloud/language/v1/language_gapic.yaml
@@ -58,6 +58,51 @@ interfaces:
     retry_codes_name: idempotent
     retry_params_name: default
     timeout_millis: 30000
+    samples:
+      standalone:
+      - calling_forms: ".*"
+        value_sets: language_sentiment_text
+        region_tag: language_sentiment_text
+      - calling_forms: ".*"
+        value_sets: language_sentiment_gcs
+        region_tag: language_sentiment_gcs
+    sample_value_sets:
+    - id: language_sentiment_text
+      description: "Analyze sentiment of text"
+      parameters:
+        defaults:
+        - document.type=PLAIN_TEXT
+        - document.content="Your text to analyze, e.g. Hello, world!"
+        attributes:
+        - parameter: document.content
+          sample_argument_name: content
+      on_success:
+      - define: sentiment=$resp.document_sentiment
+      - print:
+        - "score: %s"
+        - sentiment.score
+      - print:
+        - "magnitude: %s"
+        - sentiment.magnitude
+
+    - id: language_sentiment_gcs
+      description: "Analyze sentiment of text stored in GCS"
+      parameters:
+        defaults:
+        - document.type=PLAIN_TEXT
+        - document.gcs_content_uri="Path to text file, e.g. gs://my-bucket/textfile"
+        attributes:
+        - parameter: document.gcs_content_uri # can this be renamed?
+          sample_argument_name: uri
+      on_success:
+      - define: sentiment=$resp.document_sentiment
+      - print:
+        - "score: %s"
+        - sentiment.score
+      - print:
+        - "magnitude: %s"
+        - sentiment.magnitude
+    
   - name: AnalyzeEntities
     flattening:
       groups:
