--- a/google/cloud/language/v1/language_gapic.yaml
+++ b/google/cloud/language/v1/language_gapic.yaml
@@ -116,6 +116,111 @@ interfaces:
     retry_params_name: default
     timeout_millis: 30000
   - name: AnalyzeEntitySentiment
+    samples:
+      standalone:
+      - calling_forms: ".*"
+        value_sets: entity_sentiment_file
+        region_tag: language_entity_sentiment_file
+      - calling_forms: ".*"
+        value_sets: [entity_sentiment_text, entity_sentiment_text_simple]
+        region_tag: language_entity_sentiment_text
+    sample_value_sets:
+    - id: entity_sentiment_file
+      description: "Analyze entities and sentiment of a text file"
+      parameters:
+        defaults:
+        - document.gcs_content_uri="gs://cloud-samples-data/language/president.txt"
+        - document.type=PLAIN_TEXT
+        attributes:
+        - parameter: document.gcs_content_uri
+          sample_argument_name: gcs_uri
+      on_success:
+        - loop:
+            variable: entity
+            collection: $resp.entities
+            body:
+            - print:
+              - "Name: %s"
+              - entity.name
+            - loop:
+                variable: mention
+                collection: entity.mentions
+                body:
+                - print:
+                  - "  - Begin offset : %s"
+                  - mention.text.begin_offset
+                - print:
+                  - "    Content : %s"
+                  - mention.text.content
+                - print:
+                  - "    Magnitude : %s"
+                  - mention.sentiment.magnitude
+                - print:
+                  - "    Sentiment : %s"
+                  - mention.sentiment.score
+                - print:
+                  - "    Type : %s"
+                  - mention.type
+            - print:
+              - "  Salience : %s"
+              - entity.salience
+            - print:
+              - "  Aggregate sentiment : %s"
+              - entity.sentiment.score
+            - print:
+              - "  Aggregate sentiment magnitude : %s"
+              - entity.sentiment.score
+    - id: entity_sentiment_text
+      description: "Analyze entities and sentiment of a text string"
+      parameters:
+        defaults:
+        - document.content="A happy President Kennedy celebrated at the White House Saturday."
+        - document.type=PLAIN_TEXT
+        attributes:
+        - parameter: document.content
+          sample_argument_name: content
+      on_success:
+        - loop:
+            variable: entity
+            collection: $resp.entities
+            body:
+            - print:
+              - "Name: %s"
+              - entity.name
+            - loop:
+                variable: mention
+                collection: entity.mentions
+                body:
+                - print:
+                  - "  - Begin offset : %s"
+                  - mention.text.begin_offset
+                - print:
+                  - "    Content : %s"
+                  - mention.text.content
+                - print:
+                  - "    Magnitude : %s"
+                  - mention.sentiment.magnitude
+                - print:
+                  - "    Sentiment : %s"
+                  - mention.sentiment.score
+                - print:
+                  - "    Type : %s"
+                  - mention.type
+            - print:
+              - "  Salience : %s"
+              - entity.salience
+            - print:
+              - "  Aggregate sentiment : %s"
+              - entity.sentiment.score
+            - print:
+              - "  Aggregate sentiment magnitude : %s"
+              - entity.sentiment.score
+    - id: entity_sentiment_text_simple
+      description: "Analyze entities and sentiment of a text string"
+      parameters:
+        defaults:
+        - document.content="A happy President Kennedy celebrated at the White House Saturday."
+        - document.type=PLAIN_TEXT
     flattening:
       groups:
       - parameters:
